--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Personal Space</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Personal Space</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
-  <h1>Personal Space</h1>
-  <button id="btn">Start/Stop</button>
-  <canvas id="gameScreen" width="400" height="600">
+    <h1>PERSONAL<br>SPACE</h1>
+    <div>
+        <canvas id="gameScreen" width="300" height="500">
 
 
 
-  </canvas>
-  <button id="score">Score</button>
-  <script type="text/javascript" src="js/script.js/"></script>
+        </canvas>
+    </div>
+    <div>
+        <button>START</button>
+        <button>SCORE</button>
+    </div>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
