weston saved my life

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
-    <h1>PERSONAL<br>SPACE</h1>
+    <h1>PERSONAL<br>🚀SPACE⭐️</h1>
     <div>
         <canvas id="gameScreen" width="500" height="600">
 
@@ -17,7 +17,7 @@
         </canvas>
     </div>
     <div>
-        <button>START</button>
+        <button>START</button>👽
         <button>SCORE</button>
     </div>
 <script type="text/javascript" src="js/script.js"></script>
