--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
     <h1>PERSONAL<br>🚀SPACE⭐️</h1>
     <div>
-        <canvas id="gameScreen" width="500" height="600">
-
-        </canvas>
+        <canvas id="gameZone" width="500" height="600"></canvas>
     </div>
     <div>
         <button>START</button>👽
