updated readMe, started adding score recogition, still need start/stop functionality

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
         <canvas id="gameZone" width="500" height="500"></canvas>
     </div>
     <div>
-        <button>START</button>
-        <button>SCORE</button>
+        <button id="stateBtn"></button>
+        <!-- state: loaded, start/stop -->
+        <button id="scoreBtn"></button>
+        <!-- score: use points to...? deploy EMP
+            (clear enemies from screen for duration,
+            different from shield which absorbs alien hits) -->
     </div>
+    <h2>© Chris Goss 2020</h2>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
