cleaned code,, failed to meet MVP, bedtime

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <canvas id="gameZone" width="500" height="500"></canvas>
     </div>
     <div>
-        <button id="stateBtn"></button>
+        <button id="stateBtn">STATE</button>
         <!-- state: loaded, start/stop -->
-        <button id="scoreBtn"></button>
+        <button id="scoreBtn">SCORE</button>
         <!-- score: use points to...? deploy EMP
             (clear enemies from screen for duration,
             different from shield which absorbs alien hits) -->
