--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <canvas id="gameZone" width="500" height="500"></canvas>
     </div>
     <div>
-        <button id="stateBtn">STATE</button>
-        <!-- state: loaded, start/stop -->
-        <button id="scoreBtn">SCORE</button>
-        <!-- score: use points to...? deploy EMP
+        <button id="stateBtn"></button>
+        <!-- loaded, start/stop -->
+        <button id="scoreBtn"></button>
+        <!-- use points to deploy EMP
             (clear enemies from screen for duration,
             different from shield which absorbs alien hits) -->
     </div>
