minor readability tweaks, game is playable, Restart nonfunctional, little styling overall

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div>
         <button id="stateBtn"></button>
-        <!-- loaded, start/stop -->
+        <!-- Restart yet nonfunctional -->
         <button id="scoreBtn"></button>
         <!-- use points to deploy EMP
             (clear enemies from screen for duration,
