fixed button names on endgame, added alien2, working on preventing off-canvas movement

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
         <button id="stateBtn"></button>
         <button id="scoreBtn"></button>
-        <!-- use points to deploy EMP
+        <!-- STRETCH: use points to deploy EMP
             (clear enemies from screen for duration,
             different from shield which absorbs alien hits) -->
     </div>
